--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-   <title>AdultCare</title>
+   <title>Перевозки</title>
 
    <link rel="stylesheet" href="./css/swiper-bundle2.min.css">
    <link rel="stylesheet" href="./css/style.css">
@@ -43,10 +43,10 @@
                </svg>
             </div>
             <h1>Регистрация</h1>
-            <input type="text" placeholder="ФИО">
+            <input class="name-vehichal" required type="text" placeholder="ФИО">
             <input type="password" placeholder="Гос номер ">
-            <input type="text" name="login" placeholder="Логин ">
-            <input type="text" name="password" placeholder="Пароль ">
+            <input type="text" required name="login" placeholder="Логин ">
+            <input type="text" required name="password" placeholder="Пароль ">
             <input type="text" placeholder="Подтверждение пароля  ">
             <div class="register-buttons">
                <button>Регистрация</button>
@@ -58,7 +58,7 @@
             <div class="global-block container">
                <h2>Данные о перевозчике:</h2>
                <form class="global-form">
-                  <input type="text" placeholder="Полное наименование">
+                  <input type="text" required class="fullname-vehichal" placeholder="Полное наименование">
                   <input type="text" placeholder="ФИО Генерального директора">
                   <input type="text" placeholder="ИНН">
                   <input type="text" placeholder="Тип заявителя">
@@ -69,33 +69,43 @@
             <div class="global-block container">
                <h2>Контактная информация:</h2>
                <form class="global-form">
-                  <input type="text" placeholder="Мобильный телефон">
-                  <input type="text" placeholder="Email">
+                  <input type="text" required class="tel-vehichal" placeholder="Мобильный телефон">
+                  <input type="text" required class="email-vehichal" placeholder="Email">
+               </form>
+            </div>
+            <div class="global-block container">
+               <h2>Сведения о тягаче:</h2>
+               <form class="global-form">
+                  <input type="text" required class="markcar-vehichal" placeholder="Марка тягача">
+                  <input type="text" required class="modelcar-vehichal" placeholder="Модель тягача">
                </form>
             </div>
             <div class="global-block container">
                <h2> Адрес регистрации:</h2>
                <form class="global-form">
-                  <input type="text" placeholder="Страна регистрации">
+                  <input type="text" required class="country-vehichal" placeholder="Страна регистрации">
                   <input type="text" placeholder="Регион">
-                  <input type="text" placeholder="Город">
-                  <input type="text" placeholder="Район">
+                  <input type="text" required class="city-vehichal" placeholder="Город">
+                  <input type="text" required class="raon-vehichal" placeholder="Район">
                   <input type="text" placeholder="Улица">
-                  <input type="text" placeholder="Дом">
+                  <input type="text" required class="house-vehichal" placeholder="Дом">
                   <input type="text" placeholder="Строение">
-                  <input type="text" placeholder="Квартира">
+                  <input type="text" required class="numberhouse-vehichal" placeholder="Квартира">
                </form>
             </div>
             <div class="global-block container">
                <h2>Сведения о грузе:</h2>
                <form class="global-form">
                   <input type="text" placeholder="Тип груза">
-                  <input type="text" placeholder="Наименование груза ">
-                  <input type="text" placeholder="Масса (т)">
-                  <input type="text" placeholder="Длинна (м)">
-                  <input type="text" placeholder="Высота (м)">
+                  <input type="text" required class="name-track-vehichal" placeholder="Наименование груза ">
+                  <input type="number" required class="weight-vehichal" placeholder="Масса (т)">
+                  <input type="number" required class="lenght-vehichal" placeholder="Длинна (м)">
+                  <input type="number" required class="width-vehichal" placeholder="Ширина, (м)">
+                  <input type="number" required class="height-vehichal" placeholder="Высота (м)">
                   <input type="text" placeholder="ОГРНИП">
                </form>
+
+               <a class="red-button" href="./pdf.html">Перейти</a>
             </div>
          </div>
       </section>
